# fc4r

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: checks.yaml
config/: labels.toml
docs/: examples-and-recipes.md  pendings.md
src/: config.rs  core.rs  extra.rs  label.rs  lib.rs
src/core/: config.rs  document.rs  error.rs  label.rs  query.rs
src/extra/: input.rs  ipc.rs
src/utils/: fs.rs
test_dir/fileclass/: settings.toml
test_dir/fileclass_invalid_toml/labels/: invalid.toml
