[package]
# TODO: Consider changing package name to `fc4r`.
name = "fileclass"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
tabled = "0.12.1"
toml = "0.7.4"
