[package]
# TODO: Consider changing package name to `fc4r`.
name = "fileclass"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
dunce = "1.0.4"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.106"
tabled = "0.12.1"
toml = "0.7.4"
